# test-architecture-learning

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docs/: README.md  learning-journal.md  scratch.md  workflows.md
docs/architecture/: README.md  decisions.md
docs/architecture/decisions/: ADR-001-arquitectura-hexagonal.md  ADR-002-selectores-decision-de-nombres.md  ADR-003-separacion-common-locators.md  template.md
docs/blog-drafts/: README.md
docs/resources/: learning-resources.md  useful-links.md
framework/adapters/fake/: fake_browser_adapter.py
framework/adapters/locators/: blog_page_locators.py  common_locators.py  home_page_locators.py  post_card_locators.py  post_metadata_locators.py  post_page_locators.py  tag_page_locators.py
framework/adapters/playwright/: browser_adapter.py
framework/infrastructure/: config.py
framework/ports/: browser_port.py
framework/scenarios/: blog_listing_scenario.py  home_page_scenario.py  navigation_scenario.py  post_page_scenario.py  tag_page_scenario.py
months/: README.md
months/month-01-foundations/: README.md
suts/: README.md
tests/: conftest.py  test_blog_listing.py  test_blog_listing_scenario_edge2edge.py  test_featured_post_navigation.py  test_home_page_loads_correctly.py  test_mobile_blog_listing.py  test_responsive_design.py  test_tag_navigation.py
tests/fixtures/: fake_fixtures.py  mobile_fixtures.py
