[project]
name = "test-architecture-roadmap"
version = "0.1.0"
description = "Roadmap de aprendizaje de 12 meses para arquitectura de pruebas"
authors = [
  {name = "Ignacio", email = "contacto@ignaciops.dev"}
]
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.40",
    "pytest>=9.0",
    "pytest-playwright>=0.7.1",
    "allure-pytest>=2.15.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["framework*", "tests*"]
exclude = ["months*", "suts*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]